--- a/ng_PetBoarding_app/src/app/features/profile/components/profile-info.component.html
+++ b/ng_PetBoarding_app/src/app/features/profile/components/profile-info.component.html
@@ -33,8 +33,11 @@
       </div>
       @if (lastUpdate) {
         <div class="mt-2 text-center text-md-end">
-          <small class="text-white-50 d-flex align-items-center justify-content-center justify-content-md-end">
-            <mat-icon class="me-1" style="font-size: 0.875rem; width: 0.875rem; height: 0.875rem;">update</mat-icon>
+          <small
+            class="text-white-50 d-flex align-items-center justify-content-center justify-content-md-end">
+            <mat-icon class="me-1" style="font-size: 0.875rem; width: 0.875rem; height: 0.875rem"
+              >update</mat-icon
+            >
             Dernière mise à jour : {{ lastUpdate }}
           </small>
         </div>
