linting chnage password + profile-edit

--- a/ng_PetBoarding_app/src/app/features/profile/components/change-password-dialog.component.html
+++ b/ng_PetBoarding_app/src/app/features/profile/components/change-password-dialog.component.html
@@ -102,9 +102,7 @@
   </mat-dialog-content>
 
   <mat-dialog-actions align="end" class="gap-2">
-    <button mat-stroked-button (click)="onCancel()" [disabled]="isSubmitting()">
-      Annuler
-    </button>
+    <button mat-stroked-button (click)="onCancel()" [disabled]="isSubmitting()">Annuler</button>
     <button
       mat-raised-button
       color="primary"
